--- a/virtusa/static/css/service_updated13.css
+++ b/virtusa/static/css/service_updated13.css
@@ -1,14 +1,8 @@
-
-
-body {
-  background: #fff;
-  color: #444;
-  font-family: "Open Sans", sans-serif;
-}
-
-a {
-  color: #007bff;
-  transition: 0.5s;
+body, button, input, select, optgroup, textarea {
+	color: #333;
+	font-family: 'Synthesis', sans-serif !important;
+	font-size: 15px !important;
+	line-height: 1.2 !important;
 }
 
 .main-container {
@@ -19,30 +13,7 @@ a {
  padding-bottom: 100px; /* height of your footer */
 }
 
-a:hover,
-a:active,
-a:focus {
-  color: s;
-  outline: none;
-  text-decoration: none;
-}
 
-p {
-  padding: 0;
-  margin: 0 0 30px 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  margin: 0 0 20px 0;
-  padding: 0;
-}
 
 /* Back to top button */
 
@@ -320,9 +291,13 @@ background: rgba(0,254, 255, 0.8);
   float: right;
 }
 
-#intro .intro-info {
+#intro .tagline {
 
-  float: left;
+  margin: 0 0 25px !important;
+      font-size: 34px !important;
+      color: #000 !important;
+      font-family: 'Synthesis', sans-serif !important;
+      text-align: center;
 }
 
 #intro .intro-info h2 {
@@ -384,17 +359,31 @@ background: rgba(0,254, 255, 0.8);
 # Nav Bar
 --------------------------------------------------------------*/
 .nav-tab > li > a {
-  margin: 0;
-color:black;}
+  font-size: 16px;
+      font-family: 'Synthesis', sans-serif !important;
+      font-weight: 700;
+      color: #006AA5;
+      /* border: 1px solid #ccc; */
+      padding: 10px 58px;
+      display: block;
+  }}
+
+
 .breadcrumb input[type="radio"] {
   display: none;
+
+
+
 }
 
 .nav-tab .nav-link.active,
 .nav-tab .nav-item.show .nav-link {
-  color: white;
-  background-color: black;
-  border-color: #dee2e6 #dee2e6 #fff;
+
+
+      background: #006AA5;
+border-color: #006AA5;
+color: #fff;
+text-decoration: none;
 }
 
 .breadcrumb input[type="checkbox"] {
@@ -714,8 +703,9 @@ a.morelink {
 }
 .comment {
 
+  font-size: 17px;
+  line-height: 1.7;
 
-      margin: 10px;
     height: 100px;
 }
 
@@ -821,6 +811,16 @@ a.morelink {
   font-weight: 600;
   font-size: 24px;
 }
+
+ /*breadcrumb
+ -----------------------------*/
+ #filter {
+    padding: 10px 0 10px !important;
+    background: #f7f7f7;
+
+    position: relative;
+}
+
 
 /* Services Section
 --------------------------------*/
