--- a/templates/services.html
+++ b/templates/services.html
@@ -401,20 +401,44 @@ function likebutton() {
      <!--==========================
        Footer
      ============================-->
-     <footer id="footer">
-
-
-       <div class="container">
-         <div class="copyright">
-           &copy; Copyright <strong>VirtusaCorp</strong>. All Rights Reserved
-         </div>
-         <div class="credits">
-
-           Designed by <a href="https://www.virtusa.com">xLabs</a>
-         </div>
-       </div>
-     </footer><!-- #footer -->
-
+     <footer id="colophons" class="site-footer vn-site-footer">
+          <div class="contact-form ">
+            <div class="container-fluid">
+              <div class="row vn-row">
+              <div class="col-lg-12">
+                  <div class="contain">
+                <div class="footer-menu">
+                 <div class="vn-row footer-logo text-left">
+               <div class="site-branding">
+     <p class="site-title"> <a href="https://corpweb.virtusa.com" rel="home">
+     <img src="https://mhgbtcuwzn-2-flywheel.netdna-ssl.com/wp-content/uploads/2019/08/virtusa-footer-logo.png" class="site-logo" alt="Virtusa Logo"> </a>
+     </p>
+     </div>
+     </div>
+     <div class="row vn-row" style="margin:0 !important;">
+     <div class="col-md-6 col-sm-6">
+     <ul class="soc">
+     <li><a class="soc-facebook" href="https://www.facebook.com/VirtusaCorp" target="_blank"> <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i> </a></li>
+     <li><a class="soc-twitter" href="https://twitter.com/VirtusaCorp" target="_blank"> <i class="fa fa-twitter fa-2x" aria-hidden="true"></i> </a></li>
+     <li><a class="soc-linkedin" href="https://www.linkedin.com/companies/virtusa" target="_blank"> <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i> </a></li>
+     <li><a class="soc-instagram" href="https://www.instagram.com/virtusacorp/" target="_blank"> <i class="fa fa-instagram fa-2x" aria-hidden="true"></i> </a></li>
+     <li><a class="soc-youtube" href="https://www.youtube.com/user/VirtusaCorporation" target="_blank"> <i class="fa fa-youtube fa-2x" aria-hidden="true"></i> </a></li>
+     </ul></div>
+     <div class="col-md-3 hide-mob"></div>
+     <div class="col-md-3 col-sm-6">
+     <ul class="en privacy-links">
+     <li><a href="/corporate-citizenship-compliance/">Compliance</a>|</li>
+     <li><a href="/privacy-statement/">Privacy</a></li>
+     </ul>
+     </div>
+     </div>
+     </div>
+     </div>
+     </div>
+     </div>
+     </div>
+     </div>
+     </footer>
 
 </div>
 
